provarAnt/00D1b0000000d5bEAA/objects/SalesIQ__Account_Assignment_Update__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Assignment Updates</relationshipLabel>
        <relationshipName>Account_Assignment_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assignment_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Team_Role__c</fullName>
        <label>Team Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Un_Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Un Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assignment_Updates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Assignment Update</label>
    <nameField>
        <label>Account Assignment Updates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Assignment Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>